# mail

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
mail_composer_cc_bcc_account/: README.rst  __manifest__.py
mail_composer_cc_bcc_account/tests/: test_mail_cc_bcc.py
mail_composer_cc_bcc_account/wizards/: account_move_send_wizard.py
mail_debrand/: README.rst  __manifest__.py
mail_debrand/i18n/: es.po  fr.po  fr_FR.po  it.po  mail_debrand.pot  nl.po  pt.po  sl.po  sr_Latn.po  sv.po
mail_layout_preview/: README.rst  __manifest__.py
mail_layout_preview/i18n/: es.po  it.po  mail_layout_preview.pot
mail_layout_preview/templates/: email_preview.xml
mail_layout_preview/wizard/: email_template_preview.xml
mail_notification_clean_status_error/: README.rst  __manifest__.py
mail_notification_clean_status_error/i18n/: it.po  mail_notification_clean_status_error.pot
mail_restrict_follower_selection/: README.rst  __manifest__.py
mail_restrict_follower_selection/i18n/: hr.po  mail_restrict_follower_selection.pot  sl.po
mail_restrict_follower_selection/models/: mail_followers.py  mail_thread.py  mail_wizard_invite.py
mail_restrict_follower_selection/tests/: test_mail_restrict_follower_selection.py
mail_tracking/: README.rst  __manifest__.py
mail_tracking/demo/: demo.xml
mail_tracking/i18n/: am.po  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  et.po  (+53 more)
mail_tracking_mass_mailing/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+17 files in other folders)
